place name abbrev; citations